@@ -33,8 +33,4 @@ typedef double FLOAT;
 #define TRUE 1
 #define FALSE 0
 
-#ifndef NULL
-#define NULL 0
-#endif
-
 #endif
